// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<BottomSheet /> render 1`] = `
<View
  onMoveShouldSetResponder={[Function]}
  onMoveShouldSetResponderCapture={[Function]}
  onResponderEnd={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderReject={[Function]}
  onResponderRelease={[Function]}
  onResponderStart={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  onStartShouldSetResponderCapture={[Function]}
  pointerEvents="box-none"
  style={
    Object {
      "alignSelf": "stretch",
      "bottom": -1292,
      "flex": 1,
      "height": 1292,
      "left": 0,
      "position": "absolute",
      "right": 0,
      "transform": Array [
        Object {
          "translateY": -0,
        },
      ],
    }
  }
>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "white",
          "flex": 1,
          "position": "relative",
        },
        undefined,
      ]
    }
  >
    0
    <View />
  </View>
</View>
`;

exports[`<Card /> render 1`] = `
<View
  style={
    Array [
      Object {
        "backgroundColor": "#fff",
      },
      Object {
        "borderRadius": 2,
        "elevation": 0,
        "flex": 1,
        "margin": 10,
        "padding": 10,
      },
      false,
      undefined,
    ]
  }
/>
`;

exports[`<Icon /> render 1`] = `
<Text
  allowFontScaling={false}
  style={
    Array [
      Object {
        "color": "#333",
        "fontSize": 24,
      },
      undefined,
      Object {
        "fontFamily": "Ionicons",
        "fontStyle": "normal",
        "fontWeight": "normal",
      },
      Object {},
    ]
  }
>
  
</Text>
`;

exports[`<SearchBar /> render 1`] = `
<View
  style={
    Array [
      Object {
        "alignItems": "center",
        "borderRadius": 5,
        "flexDirection": "row",
      },
      Object {
        "backgroundColor": "#ECEFF1",
        "marginBottom": undefined,
        "marginHorizontal": undefined,
        "marginTop": undefined,
      },
      undefined,
    ]
  }
>
  <TextInput
    allowFontScaling={true}
    placeholder="Mau cari tindakan atau bantuan apa?"
    placeholderTextColor="#78909C"
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "color": "#333",
          "flex": 1,
          "paddingHorizontal": 10,
          "paddingVertical": 4,
        },
        Object {
          "color": "#37474F",
        },
      ]
    }
    underlineColorAndroid="transparent"
  />
  <Text
    allowFontScaling={false}
    style={
      Array [
        Object {
          "color": "#37474F",
          "fontSize": 18,
        },
        Object {
          "marginHorizontal": 10,
        },
        Object {
          "fontFamily": "Ionicons",
          "fontStyle": "normal",
          "fontWeight": "normal",
        },
        Object {},
      ]
    }
  >
    
  </Text>
</View>
`;

exports[`<StatusBar /> render 1`] = `<View />`;

exports[`<Title /> render 1`] = `
<Text
  style={
    Array [
      Object {
        "color": "#525252",
        "fontSize": 18,
        "marginBottom": 16,
        "marginLeft": 16,
        "marginTop": 24,
      },
      Object {
        "color": "#37474F",
        "fontSize": 18,
        "marginBottom": 16,
        "marginTop": 24,
      },
      undefined,
    ]
  }
>
  Hello world!
</Text>
`;
